style.css
* {
    margin: 0;
    padding: 0;
}

.flow-circular-regular {
    font-family: "Flow Circular", system-ui;
    font-weight: 400;
    font-style: normal;
}

.container {
    display: flex;
    height: 100vh;
}

body {
    background-color: black;
    color: white;
    overflow-x: hidden;
}

.left {
    width: 300px;
    max-width: 25vw;
    overflow-y: auto;
    overflow-x: hidden;
}

.right {
    flex: 1;
    overflow-y: auto;
}

/* .left {
    width: 25vw;
    padding: 10px;
}

.right {
    width: 75vw;
} */

.home ul li {
    display: flex;
    gap: 3px;
    width: 20px;
    list-style: none;
    padding: 8px;
    font-weight: bold;
}

.library {
    height: calc(100vh - 120px);
    overflow-y: auto;
    position: relative;
    padding-bottom: 80px;
}

/* .library {
    min-height: 75vh;
    position: relative;
} */

.heading {
    display: flex;
    justify-content: space-between;
    padding: 23px 14px;
    font-weight: bold;
    align-items: center;
    width: 100%;
}

.heading img {
    width: 20px;
    height: 20px;
    cursor: pointer;
}

/* .footer {
    display: flex;
    font-size: 10px;
    color: grey;
    gap: 13px;
    position: absolute;
    bottom: 0px;
} */

.footer {
    display: flex;
    flex-wrap: wrap;
    font-size: 10px;
    color: grey;
    gap: 13px;
    margin-top: 20px;
}

.right {
    margin: 16px 0;
    position: relative;
}

.footer a {
    color: gray;
}

.header {
    display: flex;
    justify-content: space-between;
    background-color: rgb(34, 34, 34);
}

.header>* {
    padding: 20px;
}

.spotifyplaylist {
    padding: 20px;
    padding-bottom: 140px;
}

/* .spotifyplaylist {
    padding: 16px;
} */

.cardContainer {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
    gap: 20px;
    /* flex-wrap: wrap;
    overflow-y: auto;
    max-height: 70vh; */
}

/* .cardContainer {
    display: flex;
    gap: 10px;
    flex-wrap: wrap;
    overflow-y: scroll;
    max-height: 70vh;
} */

.card {
    width: 100%;
    max-width: 200px;
    min-width: 150px;
    padding: 10px;
    border-radius: 6px;
    background-color: #252525;
    position: relative;
}

.card img {
    width: 100%;
    border-radius: 6px;
}

.card:hover {
    background: #2a2a2a;
    cursor: pointer;
    transition: 0.2s;
}
.card:hover {
    background-color: #252525;
    transform: scale(1.03);
    transition: all 0.3s ease;
}

/* .card img {
    padding: 5px;
    width: 150px;
    object-fit: contain;
} */
.play {
    width: 40px;
    height: 40px;
    background-color: #1DB954;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    position: absolute;
    bottom: 15px;
    right: 15px;
    opacity: 1;
    transform: translateY(-5px)
}

/* .play {
    width: 28px;
    height: 28px;
    background-color: #1DB954;
    border-radius: 50%;
    border: 2px solid #000;
    padding: 4px;
    display: flex;
    align-items: center;
    justify-content: center;
    position: absolute;
    top: 201px;
    right: 17px;
    opacity: 1;
} */

.buttons>* {
    margin: 0 12px;
}

.Signupbtn {
    background-color: black;
    color: rgba(255, 255, 255, 0.726);
    font-weight: bold;
    border: none;
    outline: none;
    cursor: pointer;

}

.Signupbtn:hover {
    font-size: 1.01rem;
    color: white;
}

.Loginbtn {
    background-color: white;
    border-radius: 21px;
    color: black;
    font-weight: bold;
    padding: 10px;
    width: 79px;
    cursor: pointer;
    font-size: 16px;
}

.loginbtn:hover {
    font-weight: bold;
    font-size: 1.01rem;
}

/* .playerbar {
    position: absolute;
    bottom: 0;
    background-color: skyblue;
    width: 90%;
    padding: 12px;
}

.songbuttons {
    display: flex;
    justify-content: center;
    gap: 16px;
} */

.songlist ul {
    padding: 0 12px
}

.songlist ul li {
    display: flex;
    list-style-type: decimal;
    padding: 16px;
    cursor: pointer;
    margin-top: -20px;
    transition: 0.2s;
    /* border: 0.5px solid white;
    border-radius: 5px;
    margin: 3px;
    padding: 3px */
}
.songlist li.active{
    background-color: #1db954;
    color: #000;
    border-radius: 999px;
    padding:12px 16px;
}
.songlist li{
    transition: all 0.2s ease;
}
.songlist li.active:hover{
    background: #1ed760;
    border-radius: 999px;
}
.songlist li:hover{
    background: #2a2a2a;
}

/* .songlist ul li :hover{
    font-size: 1.01rem;
    color: white;
} */

.playNowContainer {
    padding: 0 14px;
    margin-top: -20px;
    margin-bottom: 15px;
}

.playNowBtn {
    display: flex;
    align-items: center;
    gap: 8px;
    background-color: #1DB954;
    color: black;
    border: none;
    border-radius: 20px;
    padding: 8px 14px;
    font-weight: bold;
    cursor: pointer;
    transition: all 0.2s ease;

}

.playNowBtn img {
    width: 16px;
    height: 16px;
}

.playNowBtn:hover {
    transform: scale(1.05);
    background-color: #1ed760;
}

.musicRow {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 5px 14px;
}

.playbar {
    position: fixed;
    bottom: 0;
    left: 300px;
    /* aligns after sidebar */
    width: calc(100% - 300px);
    background: #181818;
    padding: 15px 0;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
    border-top: 1px solid #282828;
    box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.4);
    z-index: 5;
}

.playbar img {
    width: 28px;
    cursor: pointer;
    transition: 0.2s;
}

.playbar img:hover {
    transform: scale(1.1);
}

.playbar .play-btn {
    background-color: #1DB954;
    border-radius: 50%;
    padding: 8px;
}

/* RESPONSIVE DESIGN */

@media (max-width: 1000px) {

    .left {
        width: 220px;
    }

    .playbar {
        left: 220px;
        width: calc(100% - 220px);
    }

    .cardContainer {
        grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
    }

}


@media (max-width: 700px) {

    .left {
        position: absolute;
        left: -100%;
        top: 0;
        height: 100vh;
        z-index: 10;
        width: 260px;
        background: #000;
        transition: 0.3s;
    }

    .right {
        width: 100%;
    }

    .playbar {
        left: 0;
        width: 100%;
    }

    .cardContainer {
        grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
    }

    /* .playbar{
    gap: 20px;
} */

}

@media (max-width:500px) {

    .header {
        flex-direction: column;
        gap: 10px;
    }

    .cardContainer {
        grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
    }

    .playbar {
        gap: 20px;
    }

}

.seekbar{
    height:6px;
    width:60%;
    background:#444;
    border-radius:10px;
    cursor:pointer;
    position:relative;
}

.circle{
    width:12px;
    height:12px;
    background:white;
    border-radius:50%;
    position:absolute;
    top:-3px;
    left:0%;
    transition:left 0.1s;
}

.songtime{
    font-size:12px;
    min-width:90px;
    text-align:center;
}
.volume{
    width:100px;
}
.songinfo{
    color: white;
    font-size: 14px;
    width: 200px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

